fix ticker and update review hotel service
