# backend/cmd/main/docs/swagger.yaml
@@ -329,29 +329,6 @@ paths:
       summary: Cancel or Refund Reservation
       tags:
       - HotelServices
-  /api/hotel/cleint/review/{id}:
-    put:
-      description: review reservation
-      parameters:
-      - description: Hotel Service ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      security:
-      - BearerAuth: []
-      summary: review Reservation
-      tags:
-      - HotelServices
   /api/hotel/client/{id}/{status}:
     get:
       description: get hotel service user
@@ -397,6 +374,29 @@ paths:
       security:
       - BearerAuth: []
       summary: Book Hotel Service
+      tags:
+      - HotelServices
+  /api/hotel/client/review/{id}:
+    put:
+      description: review reservation
+      parameters:
+      - description: Hotel Service ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      security:
+      - BearerAuth: []
+      summary: review Reservation
       tags:
       - HotelServices
   /api/profile/{user_id}/{role}:
